feat(product):  Se completo el model y interfaces. Ademas de crear la implementaciones de los servicios.